# django-examples

./: .env.example  README.md
article-blog-app/: README.md  pyproject.toml  (+1 more)
review-yelp-clone/: README.md  db.sqlite3  pyproject.toml  requirements.txt
review-yelp-clone/accounts/: views.py
review-yelp-clone/django_project/: settings.py  urls.py
review-yelp-clone/reviews/: models.py  tests.py  urls.py  views.py
review-yelp-clone/reviews/migrations/: 0001_initial.py  0002_review_rating.py  0003_alter_review_rating_alter_review_restaurant.py  0004_alter_review_rating.py
review-yelp-clone/templates/: base.html  home.html  restaurant_detail.html  review_delete.html  review_detail.html  review_edit.html  review_new.html
review-yelp-clone/templates/registration/: login.html  signup.html
templar-snippets/: .gitignore  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
templar-snippets/django_project/: settings.py  urls.py
templar-snippets/pages/: urls.py  views.py
templar-snippets/snippets/: models.py  urls.py  utils.py  views.py
templar-snippets/snippets/migrations/: 0001_initial.py  0002_alter_snippet_tags.py  0003_snippet_created_at_snippet_updated_at_tag_created_at_and_more.py
templar-snippets/snippets/templatetags/: markdown_extras.py
templar-snippets/static/css/: base.css
templar-snippets/static/js/: bootstrap.bundle.min.js
templar-snippets/templates/: _base.html
templar-snippets/templates/account/: login.html  password_change.html  password_reset_from_key_done.html
templar-snippets/templates/pages/: about.html  home.html
(+150 files in other folders)
