[project]
name = "review-yelp-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.10.0",
    "astroid==3.3.11",
    "backports-datetime-fromisoformat==2.0.3",
    "crispy-bootstrap5==2025.6",
    "dill==0.4.0",
    "dj-database-url==3.0.1",
    "dj-email-url==1.0.6",
    "django==5.2.7",
    "django-cache-url==3.4.5",
    "django-crispy-forms==2.4",
    "environs==14.3.0",
    "gunicorn==23.0.0",
    "isort==6.1.0",
    "marshmallow==4.0.1",
    "mccabe==0.7.0",
    "packaging==25.0",
    "platformdirs==4.5.0",
    "pylint==3.3.9",
    "pylint-django==2.6.1",
    "pylint-plugin-utils==0.9.0",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "tomli==2.3.0",
    "tomlkit==0.13.3",
    "typing-extensions==4.15.0",
    "whitenoise==6.11.0",
]
