[project]
name = "templar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django-allauth[openid,socialaccount] ~=65.2",
  "django-debug-toolbar ~=4.4",
  "crispy-bootstrap5 ~=2024.10",
  "gunicorn ~=23.0",
  "psycopg[binary] ~=3.2",
  "whitenoise ~=6.7",
  "environs[django]>=14.6.0",
  "djlint>=1.36.4",
  "markdown>=3.10.2",
  "pygments>=2.19.2",
  "nh3>=0.3.3",
  "django>=5.1.3",
]

[dependency-groups]
dev = [
  "typing_extensions ~=4.12",
]
